--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ro-RO">
+<html lang="es">
 <head>
   <meta charset="utf-8" />
   <link rel="preconnect" href="https://use.fontawesome.com">
