--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
+  <meta name="google-site-verification" content="UTgzJrJLJOaoakfbRYuWhkLW_5PxDyKln-RfCdSsB78" />
   <link rel="preconnect" href="https://use.fontawesome.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
