--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <title>Howell & Asociados</title>
 </head>
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Howell & Asociados, liderado por George Eduard Howell Rendon, ofrece asesoría integral en derecho comercial, penal, civil, familiar, inmigración y más.</noscript>
   <div id="root"></div>
   
 </body>
