chore: updated index.html

--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,10 @@
   <meta property="og:url" content="https://howellasociados.onrender.com/" />
   <meta property="og:image" content="https://howellasociados.onrender.com/favicon.png" />
   
-  <title>Howell & Asociados - Asesoría Legal Integral</title>
+  <title>Abogado en Cartagena | Howell & Asociados - Asesoría Legal Integral</title>
 </head>
 <body>
-  <noscript>Howell & Asociados, liderado por George Eduard Howell Rendon, ofrece asesoría integral en derecho comercial, penal, civil, familiar, inmigración y más.</noscript>
+  <noscript>Howell & Asociados, liderado por George Eduard Howell Rendon abogado en Cartagena, ofrece asesoría integral en derecho comercial, penal, civil, familiar, inmigración y más.</noscript>
   <div id="root"></div>
 </body>
 </html>
